--- a/js-server/package.json
+++ b/js-server/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
