--- a/js-server/.env
+++ b/js-server/.env
@@ -3,7 +3,7 @@ DB_USER=root
 DB_PASSWORD=12345
 DB_NAME=photobucket
 DB_PORT=3306
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_BUCKET_NAME=
-AWS_BUCKET_REGION=
+AWS_ACCESS_KEY_ID=AKIAZI2LIC4SVWKUQEGN
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET_NAME=practica2-grupo9
+AWS_BUCKET_REGION=us-east-1
